# src/handlers/v1/system.ts
@@ -1,8 +1,0 @@
-import { Request, Response } from 'express';
-
-export const getHealth = async (_req: Request, res: Response) => {
-  res.json({
-    statusCode: 200,
-    message: 'OK',
-  });
-};
